<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CreateRecords">

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="330dp">

    </com.google.android.gms.maps.MapView>

    <Button
        android:id="@+id/yenile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/colorPrimary"
        android:text="@string/tab2map_buttonyenile"
        android:textColor="@color/beyaz" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab2map_address"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tab2Adres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/verialinamadi" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/tab2map_addressdescription"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/tab2AdresTarif"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|start"
        android:hint="@string/tab2map_addressdescription_hint"
        android:inputType="textMultiLine"
        android:maxLength="299"
        android:scrollbars="vertical" />

</LinearLayout>