<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Homepage">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <Button
            android:id="@+id/dialogReddedildiButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@color/beyaz"
            android:gravity="center"
            android:text="@string/reddedildi"
            android:textAllCaps="false"
            android:textColor="@color/kırmızı"
            android:textSize="22sp" />

        <Button
            android:id="@+id/dialogInceleniyorButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/beyaz"
            android:gravity="center"
            android:text="@string/inceleniyor"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="22sp" />

        <Button
            android:id="@+id/dialogDuzeltildiButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:background="@color/beyaz"
            android:gravity="center"
            android:text="@string/duzeltildi"
            android:textAllCaps="false"
            android:textColor="@color/yeşil"
            android:textSize="22sp" />

        <LinearLayout
            android:id="@+id/choosestate_linearlayoutofimage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/imageuploadstate"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/tab3image_imagemain"
                android:src="@drawable/noimage" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tab3imageRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/d_seccamera_galeri_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:background="@color/beyaz"
                android:padding="15dp"
                android:text="@string/chooseimagemethod_dialog_button_gallery"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/d_seccamera_photo_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="6dp"
                android:background="@color/beyaz"
                android:padding="15dp"
                android:text="@string/chooseimagemethod_dialog_button_camera"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/tab1info_description"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/dialogStateDescEdittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:hint="@string/degisimsebebistate"
            android:inputType="textMultiLine"
            android:maxLength="999"
            android:scrollbars="vertical"
            android:textSize="16sp" />


    </LinearLayout>

</ScrollView>